--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">BlackMambaHellfire</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">The technology of the future is here!</h2>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">WE CREATE FUTURE</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="engine.php">Get Started</a>
                 </div>
             </div>
